add RoomGenerator and add DetailsMeetingActivity (empty)

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,10 +6,17 @@
     <group android:checkableBehavior="single">
 
         <item
+            android:id="@+id/date_selectionnée"
+            android:checkable="false"
+            android:title=""
+            app:showAsAction="always"
+            />
+
+        <item
             android:id="@+id/selection_date"
             android:checkable="false"
             android:title="Sélectionner une date "
-            app:showAsAction="always" />
+             />
 
 
         <item
