--- a/app/src/main/res/layout/meeting.xml
+++ b/app/src/main/res/layout/meeting.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/constraint_layout">
 
     <ImageButton
         android:id="@+id/meeting_delete_button_meeting_list"
