--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,10 +6,11 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/date_selectionnée"
+            android:id="@+id/date_visible_toolbar"
             android:checkable="false"
             android:title=""
             app:showAsAction="always"
+
             />
 
         <item
