--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,7 +8,7 @@
         <item
             android:id="@+id/date_visible_toolbar"
             android:checkable="false"
-            android:title=""
+            android:title="Sélectionner date"
             app:showAsAction="always"
 
             />
