--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,45 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 
     <group android:checkableBehavior="single">
 
-        <item
-            android:id="@+id/date_visible_toolbar"
-            android:checkable="false"
-            android:title="Sélectionner date"
-            app:showAsAction="always"
-
-            />
+        <!--        <item-->
+        <!--            android:id="@+id/date_visible_toolbar"-->
+        <!--            android:checkable="false"-->
+        <!--            android:title="Sélectionner date"-->
+        <!--            app:showAsAction="always"/>-->
 
         <item
             android:id="@+id/selection_date"
             android:checkable="false"
-            android:title="Sélectionner une date "
-             />
+            android:title="Sélectionner date " />
+
+        <item
+            android:id="@+id/selection_salle"
+            android:checkable="false"
+            android:title="Sélectionner salle">
+
+            <menu>
+                <item
+                    android:id="@+id/Luigi"
+                    android:checkable="false"
+                    android:title="Luigi" />
+
+                <item
+                    android:id="@+id/Mario"
+                    android:checkable="false"
+                    android:title="Mario" />
+
+                <item
+                    android:id="@+id/Wario"
+                    android:checkable="false"
+                    android:title="Wario" />
+
+                <item
+                    android:id="@+id/Toad"
+                    android:checkable="false"
+                    android:title="Toad" />
+
+                <item
+                    android:id="@+id/Bowser"
+                    android:checkable="false"
+                    android:title="Bowser" />
+
+                <item
+                    android:id="@+id/Yoshi"
+                    android:checkable="false"
+                    android:title="Yoshi" />
+
+                <item
+                    android:id="@+id/Daisy"
+                    android:checkable="false"
+                    android:title="Daisy" />
+
+                <item
+                    android:id="@+id/Peach"
+                    android:checkable="false"
+                    android:title="Peach" />
+
+                <item
+                    android:id="@+id/Harmonie"
+                    android:checkable="false"
+                    android:title="Harmonie" />
+
+                <item
+                    android:id="@+id/Pokey"
+                    android:checkable="false"
+                    android:title="Pokey" />
+            </menu>
+        </item>
 
 
         <item
             android:id="@+id/filtre_date_croissante"
             android:checkable="false"
-            android:title="Filtrer par date croissante"
+            android:title="Trier par date croissante"
 
             />
-
 
         <item
             android:id="@+id/filtre_date_décroissante"
             android:checkable="false"
-            android:title="Filtrer par date décroissante"
+            android:title="Trier par date décroissante" />
 
-            />
 
         <item
             android:id="@+id/filtre_salle"
             android:checkable="false"
-            android:title="Filtrer par salle " />
-
+            android:title="Trier par salle " />
 
     </group>
 
