--- a/app/src/main/res/layout/activity_details_meeting.xml
+++ b/app/src/main/res/layout/activity_details_meeting.xml
@@ -9,7 +9,6 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true">
@@ -34,9 +33,9 @@
         <Button
             android:id="@+id/addParticipant_button"
             android:layout_width="wrap_content"
-            android:background="@color/design_default_color_primary"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:background="@color/design_default_color_primary"
             android:paddingStart="8dp"
             android:paddingTop="0dp"
             android:paddingEnd="8dp"
@@ -56,6 +55,7 @@
             android:prompt="@string/meeting_room"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.272"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -102,6 +102,7 @@
             android:layout_marginEnd="24dp"
             android:hint="@string/begin_hour"
             android:maxLines="1"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/heure_début"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/heure_début"
@@ -113,6 +114,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/finish_hour"
             android:maxLines="1"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/beginTimeEdit_TextView"
             app:layout_constraintTop_toTopOf="@+id/textView2" />
@@ -124,6 +126,8 @@
             android:layout_marginStart="32dp"
             android:ems="10"
             android:hint="@string/meeting_date"
+
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/date_textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/date_textView"
@@ -188,19 +192,22 @@
             android:hint="@string/meeting_name"
             android:inputType="text"
             android:maxLines="1"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <EditText
-                android:inputType="text"
                 android:id="@+id/meetingName_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
+                android:inputType="text"
+                android:textSize="18sp"
                 tools:ignore="LabelFor"
-                 />
+
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
 
