--- a/app/src/main/res/layout/meeting.xml
+++ b/app/src/main/res/layout/meeting.xml
@@ -40,7 +40,7 @@
         android:singleLine="true"
         android:text="Marty.McFly@gmail.com"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="10sp"
+        android:textSize="12sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/meeting_delete_button_meeting_list"
@@ -53,7 +53,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:maxEms="4"
         android:ellipsize="end"
+        android:lines="1"
         android:maxLines="1"
         android:text="Réunion 1"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
