--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#42A5F5</color>
     <color name="colorBlack">#000000</color>
-    <color name="colorGrey">#D3D3D3</color>
+    <color name="colorGrey">#DCDCDC</color>
     <color name="colorGreen">#98FB98</color>
 
 
