--- a/app/src/main/res/layout/activity_details_meeting.xml
+++ b/app/src/main/res/layout/activity_details_meeting.xml
@@ -7,11 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".ui.details.DetailsMeetingActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true">
+
+
 
         <Button
             android:id="@+id/saveMetting_button"
@@ -103,6 +116,8 @@
             android:hint="@string/begin_hour"
             android:maxLines="1"
             android:textSize="18sp"
+            android:inputType="time"
+            android:imeOptions="actionDone"
             app:layout_constraintBottom_toBottomOf="@+id/heure_début"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/heure_début"
@@ -115,6 +130,8 @@
             android:hint="@string/finish_hour"
             android:maxLines="1"
             android:textSize="18sp"
+            android:inputType="time"
+            android:imeOptions="actionDone"
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/beginTimeEdit_TextView"
             app:layout_constraintTop_toTopOf="@+id/textView2" />
@@ -126,12 +143,15 @@
             android:layout_marginStart="32dp"
             android:ems="10"
             android:hint="@string/meeting_date"
+            android:imeOptions="actionDone"
+            android:inputType="date"
 
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/date_textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/date_textView"
-            app:layout_constraintTop_toTopOf="@+id/date_textView" />
+            app:layout_constraintTop_toTopOf="@+id/date_textView"
+            app:layout_constraintVertical_bias="0.571" />
 
         <TextView
             android:id="@+id/textView4"
@@ -235,4 +255,7 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
 </ScrollView>
