--- a/app/src/main/res/layout-large/meeting.xml
+++ b/app/src/main/res/layout-large/meeting.xml
@@ -20,8 +20,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="53dp"
+        android:layout_height="56dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
@@ -41,17 +41,19 @@
         android:singleLine="true"
         android:text="Marty.McFly@gmail.com"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="12sp"
+        android:textSize="@dimen/normal"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/meeting_delete_button_meeting_list"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/meeting_name_meeting_list" />
+        app:layout_constraintTop_toBottomOf="@+id/meeting_name_meeting_list"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/meeting_name_meeting_list"
-        android:layout_width="104dp"
-        android:layout_height="25dp"
+        android:layout_width="164dp"
+        android:layout_height="31dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
@@ -60,6 +62,7 @@
         android:maxLines="1"
         android:text="Réunion 1"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="@dimen/large"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -80,7 +83,7 @@
     <TextView
         android:id="@+id/dash"
         android:layout_width="1dp"
-        android:layout_height="5dp"
+        android:layout_height="2dp"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="1"
@@ -95,10 +98,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:textAlignment="gravity"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="08h00"
-        android:textSize="@dimen/normal"
+        android:textSize="@dimen/large"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/dash1"
         app:layout_constraintTop_toTopOf="@+id/dash1" />
@@ -108,14 +112,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:ellipsize="end"
+
         android:textAlignment="center"
+        android:ellipsize="end"
         android:maxLines="1"
         android:text="Guzzler13"
-        android:textSize="@dimen/normal"
+        android:textSize="@dimen/large"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/meeting_delete_button_meeting_list"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/dash"
         app:layout_constraintTop_toTopOf="@+id/dash" />
 
