--- a/app/src/main/res/layout-xlarge/activity_details_meeting.xml
+++ b/app/src/main/res/layout-xlarge/activity_details_meeting.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
@@ -30,44 +30,45 @@
             android:id="@+id/saveMetting_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="25dp"
             android:background="@color/design_default_color_primary"
             android:paddingStart="8dp"
             android:paddingTop="0dp"
             android:paddingEnd="8dp"
             android:paddingBottom="0dp"
             android:text="@string/save_button"
-            android:textSize="30sp"
+            android:textSize="@dimen/x_large"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@android:color/background_light"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <Button
             android:id="@+id/addParticipant_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="24dp"
             android:background="@color/design_default_color_primary"
             android:paddingStart="8dp"
             android:paddingTop="0dp"
-            android:textSize="30sp"
             android:paddingEnd="8dp"
             android:paddingBottom="0dp"
             android:text="@string/add_participant"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@android:color/background_light"
+            android:textSize="@dimen/x_large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
-
 
         <Spinner
             android:id="@+id/spinner"
             android:backgroundTint="@color/colorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:prompt="@string/meeting_room"
 
             app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +85,7 @@
             android:layout_marginTop="32dp"
             android:text="@string/date"
             android:textAlignment="center"
-            android:textSize="30sp"
+            android:textSize="@dimen/x_large"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/meetingName_TextInputLayout" />
 
@@ -93,9 +94,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="56dp"
             android:text="@string/begin_hour_2points"
-            android:textSize="30sp"
+            android:textSize="@dimen/x_large"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/date_textView" />
 
@@ -104,10 +105,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="56dp"
             android:text="@string/finish_hour_2points"
-            android:textSize="30sp"
+            android:textSize="@dimen/x_large"
             app:layout_constraintEnd_toEndOf="@+id/heure_début"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/heure_début" />
 
@@ -119,7 +121,7 @@
             android:layout_marginEnd="24dp"
             android:hint="@string/begin_hour"
             android:maxLines="1"
-            android:textSize="30sp"
+            android:textSize="@dimen/x_large"
             android:inputType="time"
             android:imeOptions="actionDone"
             app:layout_constraintBottom_toBottomOf="@+id/heure_début"
@@ -133,7 +135,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/finish_hour"
             android:maxLines="1"
-            android:textSize="30sp"
+            android:textSize="@dimen/x_large"
             android:inputType="time"
             android:imeOptions="actionDone"
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
@@ -150,7 +152,7 @@
             android:imeOptions="actionDone"
             android:inputType="date"
 
-            android:textSize="30sp"
+            android:textSize="@dimen/x_large"
             app:layout_constraintBottom_toBottomOf="@+id/date_textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/date_textView"
@@ -161,9 +163,9 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="56dp"
             android:text="@string/meeting_room"
-            android:textSize="30sp"
+            android:textSize="@dimen/x_large"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -183,6 +185,7 @@
             android:id="@+id/chipGroup"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="@+id/divider"
             app:layout_constraintTop_toBottomOf="@+id/divider">
@@ -195,6 +198,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="56dp"
+            android:layout_marginStart="16dp"
             android:ems="10"
 
             android:inputType="text"
@@ -211,7 +215,7 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:inputType="text"
-                android:textSize="30sp"
+                android:textSize="@dimen/x_large"
                 tools:ignore="LabelFor"
 
                 />
@@ -222,7 +226,7 @@
             android:id="@+id/textInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="30dp"
             android:hint="@string/participants"
             android:minWidth="32dp"
             app:layout_constraintEnd_toStartOf="@+id/addParticipant_button"
@@ -233,7 +237,7 @@
                 android:id="@+id/participant_autoCompleteTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textSize="30sp"
+                android:textSize="@dimen/x_large"
                 android:imeOptions="actionDone"
                 android:inputType="text"
                 android:maxLines="1"
