--- a/app/src/main/res/layout-xlarge/meeting.xml
+++ b/app/src/main/res/layout-xlarge/meeting.xml
@@ -20,11 +20,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="71dp"
+        android:layout_height="77dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,42 +34,46 @@
         android:id="@+id/participants_email_meeting_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="17dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
         android:text="Marty.McFly@gmail.com"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="12sp"
+        android:textSize="22sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/meeting_delete_button_meeting_list"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/meeting_name_meeting_list" />
+        app:layout_constraintTop_toBottomOf="@+id/meeting_name_meeting_list"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/meeting_name_meeting_list"
-        android:layout_width="104dp"
-        android:layout_height="25dp"
+        android:layout_width="295dp"
+        android:layout_height="38dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:lines="1"
-        android:maxEms="4"
+
         android:maxLines="1"
         android:text="Réunion 1"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="@dimen/x_large"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/dash1"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
+        android:layout_width="2dp"
+        android:layout_height="6dp"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
+        android:textAlignment="center"
         android:maxLines="1"
         android:text="-"
         android:textSize="@dimen/normal"
@@ -79,8 +83,8 @@
 
     <TextView
         android:id="@+id/dash"
-        android:layout_width="1dp"
-        android:layout_height="5dp"
+        android:layout_width="3dp"
+        android:layout_height="8dp"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="1"
@@ -94,11 +98,11 @@
         android:id="@+id/time_textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="08h00"
-        android:textSize="@dimen/normal"
+        android:textSize="@dimen/x_large"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/dash1"
         app:layout_constraintTop_toTopOf="@+id/dash1" />
@@ -108,11 +112,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:ellipsize="end"
         android:textAlignment="center"
+        android:ellipsize="end"
         android:maxLines="1"
         android:text="Guzzler13"
-        android:textSize="@dimen/normal"
+        android:textSize="@dimen/x_large"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/meeting_delete_button_meeting_list"
         app:layout_constraintHorizontal_bias="0.0"
