--- a/app/src/main/res/layout-xlarge/spinner_item.xml
+++ b/app/src/main/res/layout-xlarge/spinner_item.xml
@@ -8,5 +8,5 @@
 
     android:padding="5dip"
     android:textColor="#808080"
-    android:textSize="30sp" />
+    android:textSize="@dimen/x_large" />
 
