--- a/app/src/main/res/layout-large/spinner_item.xml
+++ b/app/src/main/res/layout-large/spinner_item.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:background="#DCDCDC"
     android:gravity="start"
-
     android:padding="5dip"
     android:textColor="#808080"
-    android:textSize="@dimen/x_large" />
+    android:textSize="@dimen/large" />
 
