--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    app:titleTextAppearance="@style/Toolbar.TitleText"
     android:background="@color/colorPrimary"
     app:titleTextColor="@android:color/white"
     app:title="Ma réunion"
