work ux + optimize code

--- a/app/src/main/res/layout-small/meeting.xml
+++ b/app/src/main/res/layout-small/meeting.xml
@@ -39,7 +39,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:singleLine="true"
-        android:text="@string/item_text_mail"
+        android:text="Marty.McFly@gmail.com"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="12sp"
         android:textStyle="italic"
@@ -58,7 +58,7 @@
         android:lines="1"
         android:maxEms="4"
         android:maxLines="1"
-        android:text="@string/item_text_reunion"
+        android:text="Réunion 1"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="@dimen/normal"
         android:textStyle="bold"
