--- a/app/src/main/res/layout-xlarge/meeting.xml
+++ b/app/src/main/res/layout-xlarge/meeting.xml
@@ -41,7 +41,7 @@
         android:singleLine="true"
         android:text="Marty.McFly@gmail.com"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="22sp"
+        android:textSize="@dimen/large"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/meeting_delete_button_meeting_list"
