--- a/app/src/main/res/layout-normal/meeting.xml
+++ b/app/src/main/res/layout-normal/meeting.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:background="@null"
+        android:contentDescription="@string/trash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -50,75 +51,54 @@
 
     <TextView
         android:id="@+id/meeting_name_meeting_list"
-        android:layout_width="104dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:lines="1"
-        android:maxEms="4"
+        android:maxEms="3"
         android:maxLines="1"
-        android:text="@string/item_text_reunion"
+        android:text="@string/item_text_meeting"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="@dimen/normal"
+        android:textSize="@dimen/small"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/dash1"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="8dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:text="-"
-        android:textSize="@dimen/normal"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/meeting_name_meeting_list"
-        app:layout_constraintTop_toTopOf="@+id/meeting_name_meeting_list" />
-
-    <TextView
-        android:id="@+id/dash"
-        android:layout_width="1dp"
-        android:layout_height="5dp"
-        android:layout_marginStart="8dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:text="-"
-        android:textSize="@dimen/normal"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/time_textView"
-        app:layout_constraintTop_toTopOf="@+id/time_textView" />
-
-    <TextView
         android:id="@+id/time_textView"
-        android:layout_width="0dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="08h00"
-        android:textSize="@dimen/normal"
+        android:text="@string/item_text_date"
+        android:textSize="@dimen/small"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/dash1"
-        app:layout_constraintTop_toTopOf="@+id/dash1" />
+        app:layout_constraintBottom_toBottomOf="@id/meeting_name_meeting_list"
+        app:layout_constraintStart_toEndOf="@id/meeting_name_meeting_list"
+        app:layout_constraintTop_toTopOf="@id/meeting_name_meeting_list"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/room_textView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="Guzzler13"
-        android:textAlignment="center"
-        android:textSize="@dimen/normal"
+        android:text="@string/item_text_room"
+        android:textAlignment="textEnd"
+        android:textSize="@dimen/small"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/time_textView"
         app:layout_constraintEnd_toStartOf="@+id/meeting_delete_button_meeting_list"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/dash"
-        app:layout_constraintTop_toTopOf="@+id/dash" />
+        app:layout_constraintHorizontal_bias="0.409"
+        app:layout_constraintStart_toEndOf="@+id/time_textView"
+        app:layout_constraintTop_toTopOf="@+id/time_textView"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
