--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <dimen name="normal">18sp</dimen>
-    <dimen name="large">25sp</dimen>
-    <dimen name="x_large">30sp</dimen>
+    <dimen name="large">21sp</dimen>
+    <dimen name="x_large">25sp</dimen>
+    <dimen name="small">14sp</dimen>
+
 
 </resources>
