--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,11 +3,16 @@
 
     <group android:checkableBehavior="single">
 
+        <item
+            android:id="@+id/allSalles"
+            android:checkable="false"
+            android:title="Toutes les réunions" />
+
 
         <item
             android:id="@+id/selection_date"
             android:checkable="false"
-            android:title="Sélectionner date " />
+            android:title="Sélectionner date" />
 
         <item
             android:id="@+id/selection_salle"
@@ -16,55 +21,55 @@
 
             <menu>
                 <item
-                    android:id="@+id/Luigi"
+                    android:id="@+id/Peach"
                     android:checkable="false"
-                    android:title="Peach" />
+                    android:title="@string/room01" />
 
                 <item
                     android:id="@+id/Mario"
                     android:checkable="false"
-                    android:title="Mario" />
+                    android:title="@string/room02" />
 
                 <item
-                    android:id="@+id/Wario"
+                    android:id="@+id/Luigi"
                     android:checkable="false"
-                    android:title="Luigi" />
+                    android:title="@string/room03" />
 
                 <item
                     android:id="@+id/Toad"
                     android:checkable="false"
-                    android:title="Toad" />
+                    android:title="@string/room04" />
 
                 <item
                     android:id="@+id/Bowser"
                     android:checkable="false"
-                    android:title="Bowser" />
+                    android:title="@string/room05" />
 
                 <item
                     android:id="@+id/Yoshi"
                     android:checkable="false"
-                    android:title="Yoshi" />
+                    android:title="@string/room06" />
+
+                <item
+                    android:id="@+id/Wario"
+                    android:checkable="false"
+                    android:title="@string/room07" />
+
 
                 <item
                     android:id="@+id/Daisy"
                     android:checkable="false"
-                    android:title="Wario" />
-
-
-                <item
-                    android:id="@+id/Peach"
-                    android:checkable="false"
-                    android:title="Daisy" />
+                    android:title="@string/room08" />
 
                 <item
                     android:id="@+id/Harmonie"
                     android:checkable="false"
-                    android:title="Harmonie" />
+                    android:title="@string/room09" />
 
                 <item
                     android:id="@+id/Pokey"
                     android:checkable="false"
-                    android:title="Pokey" />
+                    android:title="@string/room10" />
             </menu>
         </item>
 
@@ -85,7 +90,9 @@
         <item
             android:id="@+id/filtre_salle"
             android:checkable="false"
-            android:title="Trier par salle " />
+            android:title="Trier par salle" />
+
+
 
     </group>
 
