--- a/app/src/main/res/values/participants.xml
+++ b/app/src/main/res/values/participants.xml
@@ -10,5 +10,7 @@
         <item>sarah.connor@inyourface.com</item>
         <item>skywalker@starwars.es</item>
         <item>Jenifer@bttf.com</item>
+        <item>stephanedasil@gmail.com</item>
+
     </string-array>
 </resources>
